# haskell_typeclasses_in_python

./: .pre-commit-config.yaml  README.md  pyproject.toml  typeclasses.py
