[tool.poetry]
name = "haskell-typeclasses-in-python"
version = "0.1.0"
description = ""
authors = ["Paul Reiter"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
ruff = "^0.1.5"
mypy = "^1.7.0"

[tool.ruff.lint]
extend-select = ["I"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
